--- a/common_services/common_logic/pom.xml
+++ b/common_services/common_logic/pom.xml
@@ -24,18 +24,18 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.60-SNAPSHOT</version>
+		<version>1.0.61</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>common_logic</artifactId>
 	<packaging>ejb</packaging>
 	<name>common_logic</name>
-	<version>1.1.60-SNAPSHOT</version>
+	<version>1.0.61</version>
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/common_logic</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/common_logic</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.61/common_logic</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.61/common_logic</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.61/common_logic</url>
 	</scm>
 	<build>
 		<plugins>
@@ -61,7 +61,7 @@
 						<configuration>
 							<tasks>
 								<taskdef classname="org.jibx.binding.ant.CompileTask" name="bind">
-									<classpath refid="maven.compile.classpath"></classpath>
+									<classpath refid="maven.compile.classpath" />
 								</taskdef>
 								<bind load="true" verbose="false">
 									<bindingfileset dir="${project.build.outputDirectory}/jibx">
@@ -87,7 +87,7 @@
 									<bindingfileset dir="${project.build.outputDirectory}/jibx/jibx_generated">
 										<include name="binding.xml" />
 									</bindingfileset>
-									<classpathset dir="${project.build.outputDirectory}"></classpathset>
+									<classpathset dir="${project.build.outputDirectory}" />
 								</bind>
 							</tasks>
 						</configuration>
@@ -114,7 +114,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.3.2-SNAPSHOT</version>
+			<version>1.3.6</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
