--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -278,20 +278,20 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_ear</artifactId>
-			<version>7.1.0-SNAPSHOT</version>
+			<version>7.1.0</version>
 			<scope>provided</scope>
 			<type>ear</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation_presentation</artifactId>
-			<version>1.0.67-SNAPSHOT</version>
+			<version>1.0.68</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.3.2-SNAPSHOT</version>
+			<version>1.3.6</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -314,13 +314,13 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone</artifactId>
-			<version>1.2.19-SNAPSHOT</version>
+			<version>1.2.20</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.60-SNAPSHOT</version>
+			<version>1.1.61</version>
 			<scope>compile</scope>
 		</dependency>
 	
