Resolved [PUBMAN-2365] - Titel of Journal in APA is not correct

--- a/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
+++ b/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
@@ -1,3 +1,3 @@
 configuration=import-name=OTHER,CoNE=true
-import-name=BPC,CBS,ETH,FHI,MPIA,MPIE,MPIeR,MPIK,EVOLBIO,MPIMET,MPINEURO,MPIGF,MPIINF,MPIIS,MPIMF,MPIMMG,MPIPF,MPIS,MPIP,MPI MoleGen,KHI,BiblHertz,MPQ,MPIEVA,MPIKOFO,MPIKYB,MPIDynamics,MPIBioChem,OTHER
+import-name=BPC,CBS,ETH,FHI,MPIA,MPIE,MPIeR,MPIK,EVOLBIO,MPIMET,MPINEURO,MPIGF,MPIINF,MPIIS,MPIMF,MPIMMG,MPIPF,MPIS,MPIP,MPI MoleGen,KHI,BiblHertz,MPQ,MPIEVA,MPIKOFO,MPIKYB,MPIDynamics,MPIBioChem,MPIPsykl,OTHER
 CoNE=true,false
