changed id in pom
Former-commit-id: 842e39dda8ae798476302343f409476d2d885c87

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -183,7 +183,7 @@
 			<timezone>+2</timezone>
 		</developer>
 		<developer>
-			<id>walter</id>
+			<id>mwalter</id>
 			<name>Matthias Walter</name>
 			<email>walter@mpdl.mpg.de</email>
 			<roles>
