--- a/common_services/transformationLight/pom.xml
+++ b/common_services/transformationLight/pom.xml
@@ -169,12 +169,11 @@
       		<version>1.4</version>
       		<scope>compile</scope>
     	</dependency>
-    	<dependency>
-	      <groupId>net.sf.saxon</groupId>
-	      <artifactId>saxon-dom</artifactId>
-	      <version>8.7</version>
-	      <scope>provided</scope>
-	    </dependency>
+		<dependency>
+			<groupId>net.sf.saxon</groupId>
+			<artifactId>saxon9he</artifactId>
+			<version>9.4.0.3</version>		
+		</dependency>
 	   	<dependency>
 			<groupId>javabib</groupId>
 			<artifactId>javabib</artifactId>
