--- a/common_services/fledgeddata_presentation/pom.xml
+++ b/common_services/fledgeddata_presentation/pom.xml
@@ -38,6 +38,11 @@
 	<name>fledgeddata_presentation</name>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
+	<scm>
+	  <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/fledgeddata_presentation</connection>
+    <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/fledgeddata_presentation</developerConnection>
+    <url>https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/fledgeddata_presentation</url>
+  </scm>
 
 
 	<build>
