--- a/common_services/structuredexportmanager_ear/pom.xml
+++ b/common_services/structuredexportmanager_ear/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.63-SNAPSHOT</version>
+		<version>1.0.63</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>structuredexportmanager_ear</artifactId>
 	<name>structuredexportmanager_ear</name>
 	<packaging>ear</packaging>
-	<version>1.0.66-SNAPSHOT</version>
+	<version>1.0.66</version>
 
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/structuredexportmanager_ear</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/structuredexportmanager_ear</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.63/structuredexportmanager_ear</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.63/structuredexportmanager_ear</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.63/structuredexportmanager_ear</url>
 	</scm>
 
 	<build>
@@ -250,20 +250,20 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.3.8-SNAPSHOT</version>
+			<version>1.3.8</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.66-SNAPSHOT</version>
+			<version>1.0.66</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.63-SNAPSHOT</version>
+			<version>1.1.63</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
