time condition modified

--- a/common_services/reporting/src/main/resources/reporting.properties
+++ b/common_services/reporting/src/main/resources/reporting.properties
@@ -15,15 +15,15 @@ FHI.query=(\
 %20or%20"/properties/public-status"=pending\
 )\
 %20and%20(\
-"/md-records/md-record/publication/dateAccepted">""\
-%20or%20"/md-records/md-record/publication/dateSubmitted">""\
+"/md-records/md-record/publication/dateAccepted">"0"\
+%20or%20"/md-records/md-record/publication/dateSubmitted">"0"\
 )
 FHI.sort.by=%20sortby%20"/properties/created-by/id"
 FHI.report.formats=pdf,rtf
 #how many last months to be processed
 FHI.report.months.range=1
 FHI.sender.address=pubman@mpdl.mpg.de
-FHI.recipients.addresses=franke@mpdl.mpg.de,boosen@mpdl.mpg.de,jmueller@mpdl.mpg.de
+FHI.recipients.addresses=franke@mpdl.mpg.de,boosen@mpdl.mpg.de,jmueller@mpdl.mpg.de,siedersleben@mpdl.mpg.de
 FHI.recipients.cc.addresses=
 FHI.recipients.bcc.addresses=
 FHI.reply.to.addresses=
