bugfix in pubman_ear/pom.xml
Former-commit-id: f95fa174fa989a4562e16f5ce6477085d55b8a41

--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -569,7 +569,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_presentation</artifactId>
-			<version>1.0.51</version>
+			<version>1.0.53-SNAPSHOT</version>
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
