property framework.scientist.displayname added

--- a/common_services/framework_access/src/test/resources/common.properties
+++ b/common_services/framework_access/src/test/resources/common.properties
@@ -16,6 +16,7 @@ framework.admin.password=${framework.admin.password}
 framework.scientist.username=${framework.scientist.username}
 framework.scientist.password=${framework.scientist.password}
 framework.scientist.id=${framework.scientist.id}
+framework.scientist.displayname=${framework.scientist.displayname}
 
 framework.librarian.username=${framework.librarian.username}
 framework.librarian.password=${framework.librarian.password}
