--- a/pubman/pubman_installer/src/main/resources/log4j.properties
+++ b/pubman/pubman_installer/src/main/resources/log4j.properties
@@ -33,10 +33,10 @@ log4j.additivity.de.mpg.escidoc=false
 
 log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %m%n
+log4j.appender.MyConsoleAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%F] %m%n
 
 log4j.appender.MyFileAppender=org.apache.log4j.FileAppender
 log4j.appender.MyFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyFileAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %m%n
+log4j.appender.MyFileAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%F] %m%n
 log4j.appender.MyFileAppender.File=installer.log
 log4j.appender.MyFileAppender.append=false
