--- a/pubman/pubman_installer/src/main/resources/MPG/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/MPG/pubman.properties
@@ -24,6 +24,10 @@
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
+# ######################################################################
+# ########### MPG SOURCE
+# ######################################################################
+
 # Email configuration for SMTP server
 escidoc.pubman_presentation.email.mailservername=${escidoc.pubman_presentation.email.mailservername}
 escidoc.pubman_presentation.email.sender=${escidoc.pubman_presentation.email.sender}
@@ -66,6 +70,11 @@ escidoc.pubman.stylesheet.classic.url=${escidoc.pubman.stylesheet.classic.url}
 escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
 escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.apply}
 
+<!-- Properties for PubMan special theme-->
+escidoc.pubman.stylesheet.special.url=${escidoc.pubman.stylesheet.special.url}
+escidoc.pubman.stylesheet.special.type=${escidoc.pubman.stylesheet.special.type}
+escidoc.pubman.stylesheet.special.apply=${escidoc.pubman.stylesheet.special.apply}
+
 # Properties for common standard theme
 escidoc.common.stylesheet.standard.url=${escidoc.common.stylesheet.standard.url}
 escidoc.common.stylesheet.standard.type=${escidoc.common.stylesheet.standard.type}
@@ -81,12 +90,19 @@ escidoc.common.stylesheet.classic.url=${escidoc.common.stylesheet.classic.url}
 escidoc.common.stylesheet.classic.type=${escidoc.common.stylesheet.classic.type}
 escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.apply}
 
+<!-- Properties for common special theme-->
+escidoc.common.stylesheet.special.url=${escidoc.pubman.stylesheet.special.url}
+escidoc.common.stylesheet.special.type=${escidoc.pubman.stylesheet.special.type}
+escidoc.common.stylesheet.special.apply=${escidoc.pubman.stylesheet.special.apply}
+
 <!-- URL of the favicon-->
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 
+
 <!-- version of the pubman cookie (has to be changed if style information is changed)-->
 escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
+
 
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
@@ -282,6 +298,9 @@ escidoc.syndication.ttl=${escidoc.syndication.ttl}
 escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
 escidoc.syndication.service.url=${escidoc.syndication.service.url}
 esicdoc.syndication.feeds.content.model=${esicdoc.syndication.feeds.content.model}
+
+escidoc.pubman.yearbook.content-model.id=${escidoc.pubman.yearbook.content-model.id}
+escidoc.pubman.yearbook.context.id=${escidoc.pubman.yearbook.context.id}
 
 #Url or path to an image that is displayed as logo on all Pubman Pages.
 escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
